src/objects/cnotify__Configuration__c.object
<CustomObject>
    <fields>
        <fullName>cnotify__After_Status__c</fullName>
        <label>After Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Before_Status__c</fullName>
        <label>Before Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Day__c</fullName>
        <inlineHelpText>This value indicates the number of days (before or after) the notification must be sent.</inlineHelpText>
        <label>Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cnotify__Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnotify__Event__c</fullName>
        <inlineHelpText>This is the event for which the notification will be sent.</inlineHelpText>
        <label>Event</label>
        <picklist>
            <picklistValues>
                <fullName>Loan Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Funding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Payment Reminder Before Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Payment Reminder After Due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delinquency Reminder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loan Payment Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings Payment Debit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Savings Payment Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor Fund Deposited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Investor Fund Withdrawn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>cnotify__Ignore_Before_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will not consider Before Status value of status field. Only change on Status field&apos;s value will be tracked.</inlineHelpText>
        <label>Ignore Before Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnotify__Object__c</fullName>
        <label>Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Recipient_Field_Name__c</fullName>
        <description>It should be look-up field name of Contact on the Object that is specified in Object__c field on Configuration__c.</description>
        <label>Recipient Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Status_Field_API_Name__c</fullName>
        <label>Status Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cnotify__Text_Message__c</fullName>
        <label>Text Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cnotify__Text_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Text Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cnotify__Trigger_Based_Configuration__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Trigger Based Configuration</label>
        <type>Checkbox</type>
    </fields>
    <label>Configuration</label>
    <listViews>
        <fullName>cnotify__All</fullName>
        <columns>NAME</columns>
        <columns>cnotify__Event__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>cnotify__Config</fullName>
        <columns>NAME</columns>
        <columns>cnotify__Day__c</columns>
        <columns>cnotify__Email_Notification__c</columns>
        <columns>cnotify__Event__c</columns>
        <columns>cnotify__Object__c</columns>
        <columns>cnotify__Text_Notification__c</columns>
        <columns>cnotify__Text_Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>Config</label>
    </listViews>
    <nameField>
        <displayFormat>C-{000}</displayFormat>
        <label>Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>cnotify__Days_value_for_Loan_Events</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(cnotify__Event__c, &apos;Loan Payment Reminder Before Due&apos;) &amp;&amp; ISBLANK( cnotify__Day__c ))  || (ISPICKVAL(cnotify__Event__c, &apos;Loan Payment Reminder After Due&apos;) &amp;&amp; ISBLANK( cnotify__Day__c ))</errorConditionFormula>
        <errorMessage>Please provide value in Days Field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>cnotify__Notification_Type</fullName>
        <active>true</active>
        <description>At least one notification type should be selected.</description>
        <errorConditionFormula>cnotify__Email_Notification__c = false &amp;&amp;  cnotify__Text_Notification__c = false</errorConditionFormula>
        <errorMessage>At least one notification type should be selected</errorMessage>
    </validationRules>
</CustomObject>